# pmalloc-user-space

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Doxyfile  LICENSE  README.md  pmalloc-config.cmake.in
.circleci/: config.yml
cmake/: .gitignore  arch-linux.cmake  arch-win32.cmake
include/: .gitignore  pmalloc.h  pmalloc_internals.h
include/pmalloc/: arch.h  config.in.h  internals.h  pmalloc.h
include/pmalloc/arch/: arch.h
src/: pmalloc.c
src/arch/: linux.c  win32.c
tests/: CMakeLists.txt
tests/alloc/: alignment.c  multipage.c  simple.c
tests/protect/: simple.c  write.c
tests/protect/multiple-alloc/: read-ro.c  write-ro.c
tests/simple/: create-and-destroy-pool.c  create-destroy.c  create-protect-destroy.c
